<resources>
    <string name="app_name">ParentSupportApp</string>

    <!-- Main Menu -->
    <string name="main_menu_activity_title">Parent Support App</string>
    <string name="main_menu_task">Task</string>
    <string name="main_menu_title">Menu</string>
    <string name="main_menu_help">Help</string>

    <!-- Flip Activity -->
    <string name="coin_flip_title">Coin Flip</string>
    <string name="coin_flip_suggestion">%1$s should flip next!</string>
    <string name="coin_flip_no_suggestion">No Children Currently Configured</string>
    <string name="coin_flip_flip">Flip!</string>
    <string name="coin_flip_history">History</string>
    <string name="coin_flip_heads">Heads</string>
    <string name="coin_flip_tails">Tails</string>
    <string name="coin_flip_spinner_prompt">"Select the next flipper..."</string>

    <!-- History Activity -->
    <string name="history_choice">Choice: %1$s</string>
    <string name="history_results">Results: %1$s</string>
    <string name="history_title">History</string>

    <!-- Tasks Activity -->
    <string name="tasks_add_task">Add</string>
    <string name="tasks_remove_task">Remove</string>
    <string name="tasks_edit_tasks">Edit</string>
    <string name="tasks_view_task">View</string>

    <!-- Timer Activity -->
    <string name="timer_title">Timer</string>
    <string name="timer_channel_name">Parent App Timer Channel</string>
    <string name="timer_channel_description">This Channel allows the timer activity in the parent app to display notifications</string>
    <string name="timerActivity_start">Start</string>
    <string name="timerActivity_pause">Pause</string>
    <string name="timer_activity_reset_btn_msg">Can\'t reset while running!</string>
    <string name="timer_activity_timer_end_msg">TIMER COMPLETE!</string>
    <string name="timer_alert_provide_time">Provide time</string>
    <string name="timerActivity_reset">Reset</string>
    <string name="timerActivity_1min">1 Min</string>
    <string name="timerActivity_2min">2 Min</string>
    <string name="timerActivity_3min">3 Min</string>
    <string name="timerActivity_5min">5 Min</string>
    <string name="timerActivity_10min">10 Min</string>
    <string name="timerActivity_custom">Custom</string>
    <string name="timerActivity_zero_time">00:00</string>
    <string name="timer_alert_min_hint">MM</string>
    <string name="timer_activity_ok">OK</string>

    <!-- Notification Assistant -->
    <string name="notif_assist_timer_comp">Timer Complete!</string>
    <string name="notif_assist_notif_text1">You may free the child O_O</string>
    <string name="notif_assist_alarm_silence">SILENCE</string>

    <!-- Child Config Activity -->
    <string name="list_of_all_the_children">list_of_all_the_children</string>
    <string name="enter_name">enter_name</string>
    <string name="add">add</string>
    <string name="add_a_child">add_a_child</string>
    <string name="remove_a_child">remove_a_child</string>
    <string name="edit_a_child">edit_a_child</string>
    <string name="view_all">view_all</string>
    <string name="edit_a_child2">Edit A Child</string>
    <string name="select_a_child_to_edit_it">Select a child to edit it</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_child">Are you sure you want to delete the selected child?</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="child_config_title">Child Configuration</string>
    <string name="child_config_button">Child Config</string>
    <string name="child_config_add_child">Add a child</string>
    <string name="child_config_remove_child">Remove a child</string>
    <string name="child_config_edit_child">Edit a child</string>
    <string name="child_config_view_all">View all</string>
    <string name="add_child_title">Add Child</string>
    <string name="edit_child_title">Edit Child</string>
    <string name="add_child_activity_enter_name">Enter Name</string>
    <string name="add_child_activity_added_toast">New Child Added</string>
    <string name="add_child_activity_enter_error">Enter again!</string>
    <string name="child_config_deny_permission">Permission Not Granted</string>
    <string name="child_config_data">data</string>
    <string name="child_config_confirm">Confirm</string>

    <!-- Task Activity -->
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="tasks_title">Tasks</string>
    <string name="tasks_layout_add">Add</string>
    <string name="tasks_layout_edit">Edit</string>
    <string name="tasks_layout_remove">Remove</string>
    <string name="list_of_all_the_tasks">List of all the tasks</string>
    <string name="select_a_task_to_remove_it">Select a task to remove it.</string>
    <string name="enter_name_of_task">Enter name of task</string>
    <string name="select_a_task_to_edit_it">Select a task to edit it.</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="remove_task_activity_title">Remove Task</string>
    <string name="remove_task_alert_message">Are you certain that you wish to remove the selected task?</string>
    <string name="view_task_title">Task Details</string>
    <string name="add_task_title">Add Task</string>
    <string name="remove_task_removal_message">Confirm Task Removal</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="edit_task_alert_title">Edit Task Name</string>
    <string name="edit_task_alert_message">Please provide a new task name!</string>

    <!-- Help Activity -->
    <string name="help_sources">
        Sources:
         Coin images: <a href="https://en.wikipedia.org/wiki/File:Quarter_Reverse_2010.png">Tails</a>
        , <a href="https://en.wikipedia.org/wiki/File:Quarter_Obverse_2010.png">Heads</a>\n
        Default child image: <a href="https://www.freepik.com/free-vector/collection-lovely-kids-avatars_1258328.htm#page=1&amp;query=kids%20avatar%20collection&amp;position=3&amp;from_view=search">Child Image</a>
    </string>
    <string name="help_created_msg">App created by team Carbon!!</string>
    <string name="timer_pie_chart_data_set_label">Time remaining</string>
    <string name="help_title">Help</string>

    <!-- Breathing Activity -->
    <string name="breathing_exercise_title">Breathing Exercise</string>
    <string name="breathing_exercise_complete">Good job</string>
    <string name="breathing_inhale_help">Breathe in and hold the button for at least 3 secs</string>
    <string name="breathing_inhale_error">Breathe for longer!</string>
    <string name="breathing_exhale_error">Release the button and breathe out!</string>
    <string name="breathing_exhale_help">Lets breathe out now...</string>
    <string name="breathing_begin">Begin</string>
    <string name="breathing_header">Lets take %1$s breath(s) together!</string>
    <string name="breathing_in">In</string>
    <string name="breathing_out">Out</string>
    <string name="breathing_out_prompt">Lets breathe out now...</string>
    <string name="breathing_finished">Breathing finished. Good Job!</string>

</resources>
