<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ParentSupportApp.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTasks"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#084CD8"
            app:popupTheme="@style/Theme.ParentSupportApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/listViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutTasks" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tasks_layout_add"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditTask"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonEditTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_layout_edit"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemoveTask"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTask"
        app:layout_constraintTop_toTopOf="@+id/buttonAddTask" />

    <Button
        android:id="@+id/buttonRemoveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_layout_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonEditTask"
        app:layout_constraintTop_toTopOf="@+id/buttonEditTask" />

</androidx.constraintlayout.widget.ConstraintLayout>